UX: Fix cog icon color and alignment

--- a/scss/components/inputs/editor.scss
+++ b/scss/components/inputs/editor.scss
@@ -14,14 +14,27 @@
   }
 }
 
+.d-editor-button-bar
+  .select-kit.dropdown-select-box.toolbar-popup-menu-options
+  .select-kit-header
+  .d-icon {
+  color: map-get($unity-colors, primary-400);
+}
+
+.d-editor-button-bar .btn,
+.d-editor-button-bar .btn-default {
+  display: flex;
+  align-items: center;
+}
+
 .d-editor-preview-wrapper {
   border: 1px solid #e2e8f0;
   border-radius: 0.375rem;
   padding-top: 0 !important;
   position: relative;
-  
+
   &::before {
-    content: "PREVIEW";
+    content: 'PREVIEW';
     display: inline-block;
     padding: 1rem;
     background-color: map-get($unity-colors, secondary-100);
@@ -32,7 +45,6 @@
   }
   .d-editor-preview {
     padding: 0 1rem;
-
   }
 }
 
